-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.4.1, Lustre 2.5.0
-
None
-
3
-
8956
It seems the osd-ldiskfs module depends on the mdd module because of the use of md_capainfo() in osd_object_auth() and osd_capa_get(). That causes a circular dependency on the modules and should be fixed. Problems are only avoided because the OSD module is loaded manually depending on OSD type.
- is related to
-
LU-3105 remove unused code related to capabilities
-
- Resolved
-